# server/service_v2/router.go
@@ -6,4 +6,6 @@ func RegisterRoutes(r fiber.Router) {
 	r.Get("/shops", GetShops)
 	r.Get("/machines", GetMachines)
 	r.Get("/machine/:machineId", GetMachine)
+	r.Get("/machine/:machineId/like", Like)
+	r.Get("/machine/:machineId/dislike", DisLike)
 }
